[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replicate-gradio"
version = "0.1.0"
description = "A Python package for replicating Gradio applications"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/your-username/replicate-gradio"
repository = "https://github.com/your-username/replicate-gradio"

[tool.setuptools.packages.find]
where = ["replicate_gradio"]

[tool.setuptools]
packages = {find = {}}

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
